layout issues regarding image and post heading wrapper fixed on specific blog posts

--- a/client/src/components/feature/specificBlog/specificBlog.css
+++ b/client/src/components/feature/specificBlog/specificBlog.css
@@ -55,11 +55,13 @@
 }
 .post-image {
     width: 100%;
+    height: 30rem;
+    object-fit: cover;
     margin: auto;
 }
 .img-relative {
     position: absolute;
-    width: 60%;
+    width: 95%;
     bottom: 0;
     left: 0;
     transform: translate(-0%, 30%);
@@ -72,7 +74,7 @@
     background-color: #fcfcfc;
 }
 .specific-post-desc p {
-    margin-top: 3rem;
+    margin-top: 4rem;
     text-align: center;
     color: rgb(104, 104, 104);
 }
